Typo in Conclusion

--- a/CC07 GP09 DDW 2D.ipynb
+++ b/CC07 GP09 DDW 2D.ipynb
@@ -369,7 +369,7 @@
    "source": [
     "# Part 1 Conclusion\n",
     "We can conclude that LOG(GDP) transformation is the best fit of our model due to the following:\n",
-    "- MSE for LOG(GDP) transformation has the lowest in comparision to the other models\n",
+    "- MSE for LOG(GDP) transformation has the lowest in comparison to the other models\n",
     "- Residual plot of the LOG(GDP) is the most random and unpredictable compared to GDP and 1/GDP transformation\n",
     "\n",
     "There is also linear correlation of GDP and PEP to PDPM as we hypothesised.\n",
