Compressing Code for Task 1
First attempt

--- a/CC07 GP09 DDW 2D.ipynb
+++ b/CC07 GP09 DDW 2D.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -76,9 +76,7 @@
     "    return df_feature, df_target\n",
     "def prepare_feature(df_feature): #changes from LR, add the cols to add more to column in matrix\n",
     "    feature_val = df_feature.to_numpy()\n",
-    "    #make column of 1s\n",
-    "    ones = np.ones((df_feature.shape[0], 1)) #n rows and 1 column\n",
-    "    #Concatenate Ones with feature val (See np.concatenate document)\n",
+    "    ones = np.ones((df_feature.shape[0], 1)) #n rows and 1 column of ones\n",
     "    x = np.concatenate((ones,feature_val), axis = 1) #axis = 1 means increase no. of col per row (add side by side)\n",
     "    return x\n",
     "def prepare_target(df_target):\n",
@@ -109,17 +107,13 @@
     "    error = np.matmul(X,beta) - actual_y\n",
     "    error_sq = np.matmul(error.T,error) #this is effectively (y-y_a)**2 (error.T refers to the transpose of error)\n",
     "    J = (1/(sample_size*2))*error_sq #is still not a scalar, is a numpy object [[J value]]\n",
-    "    #print(J)\n",
     "    return J[0][0] #to return as a scalar\n",
     "def gradient_descent_multi(X, y, beta, alpha, num_iters):\n",
     "    J_storage = []\n",
-    "    for i in range(0, num_iters):#actually while loop until convergences irl, not fixed iteration count\n",
-    "        #step 2: compute derivative of error with current Beta\n",
-    "        derivative_error = (1/(X.shape[0]))*np.matmul(X.T,(np.matmul(X,beta)-y)) #after dfferentiation, the power 2 is brought down, so its 1/m, not 1/2m\n",
-    "        #apply new beta\n",
-    "        beta = beta - alpha * derivative_error\n",
-    "        #Store the error with current params prediction\n",
-    "        J_storage.append(compute_cost(X,y,beta))\n",
+    "    for i in range(0, num_iters):\n",
+    "        derivative_error = (1/(X.shape[0]))*np.matmul(X.T,(np.matmul(X,beta)-y)) \n",
+    "        beta = beta - alpha * derivative_error #apply new beta\n",
+    "        J_storage.append(compute_cost(X,y,beta))#Store the error with current params prediction\n",
     "    return beta, J_storage\n",
     "def transform_features(df_feature, colname, degree = 2):\n",
     "    if degree == 2:\n",
@@ -145,7 +139,7 @@
     "- GDP is inversely related to PDPM\n",
     "- PEP is linearly related to PDPM\n",
     "\n",
-    "As such we will clean the raw data by removing outliers based on the following criterias:\n",
+    "As such we will clean the raw data by removing outliers based on the following criteria:\n",
     "- Countries with <600 Days with Death: Insufficient data\n",
     "- Countries with low GDP per capita: [Unaccounted Economies](https://www.weforum.org/agenda/2018/01/gdp-frog-matchbox-david-pilling-growth-delusion/)\n",
     "- Countries with low PDPM: Suspected of [under-reporting](https://www.cfr.org/in-brief/how-much-are-countries-underreporting-covid-19-cases-and-deaths)\n",
@@ -162,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +165,7 @@
        "[Text(0.5, 0, 'PEP'), Text(0, 0.5, 'PDPM'), Text(0.5, 1.0, 'PDPM vs PEP')]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -211,7 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We observe from the PDPM vs. GDP graph (left) that the relationship is not linear, hence we transformed the GDP feature to **1/GDP** and **-log(GDP)** and calculated the MSE to measure of the quality of our estimation model. R^2 measurement was not used as it does not show whether the right model is choosen and the predicted capacity of the obtained fit.\n",
+    "We observe from the PDPM vs. GDP graph (left) that the relationship is not linear, hence we transformed the GDP feature to **1/GDP** and **LOG(GDP)** and calculated the MSE to measure of the quality of our estimation model. R^2 measurement was not used as it does not show whether the right model is chosen and the predicted capacity of the obtained fit.\n",
     "\n",
     "The code below executes the described operation, displays all the outputs in a subplot and calculates the Beta coefficients of our model.\n",
     "$$y =  \\beta_0 + \\beta_1 x_1 + \\beta_2 x_2$$\n",
@@ -223,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -261,41 +255,35 @@
     "df_features_t2, df_target = get_features_targets(df,[feature1_label_transform2,feature2_label],[target_label])\n",
     "#Creating Subplots to put multiple graphs\n",
     "fig , axes = plt.subplots(5,3,figsize = (20,15))\n",
-    "#Plotting how each GDP transformation graph looks like\n",
-    "axes[0][0].scatter(df_features[feature1_label], df_target)\n",
-    "axes[0][0].set(xlabel= feature1_label, ylabel = target_label, title = target_label + \" vs \" + feature1_label)\n",
-    "axes[0][1].scatter(df_features_t1[feature1_label_transform1], df_target)\n",
-    "axes[0][1].set(xlabel=feature1_label_transform1,ylabel =target_label, title = target_label + \" vs \" + feature1_label_transform1)\n",
-    "axes[0][2].scatter(df_features_t2[feature1_label_transform2], df_target)\n",
-    "axes[0][2].set(xlabel=feature1_label_transform2,ylabel= target_label, title = target_label + \" vs \"+ feature1_label_transform2)\n",
-    "#fig.suptitle(\"Graphs\")\n",
     "\n",
     "betas,preds,mses = [None]*3 , [None]*3,[None]*3\n",
     "#Repeats the illustration, finding of Beta coefficients and model prediction for each GDP transformation\n",
     "for col_GDP in range(len(feature_arr)): \n",
     "    if col_GDP == 0:\n",
     "        df_features_z = normalize_z(df_features)\n",
+    "        feature = df_features\n",
     "    elif col_GDP == 1:\n",
     "        df_features_z = normalize_z(df_features_t1)\n",
+    "        feature = df_features_t1\n",
     "    elif col_GDP == 2:\n",
     "        df_features_z = normalize_z(df_features_t2)\n",
+    "        feature = df_features_t2\n",
     "    else:\n",
     "        pass\n",
-    "\n",
-    "    # Change the features and the target to numpy array using the prepare functions\n",
+    "    #Plotting each GDP transformation\n",
+    "    axes[0][col_GDP].scatter(feature[feature_arr[col_GDP]], df_target)\n",
+    "    axes[0][col_GDP].set(xlabel= feature_arr[col_GDP], ylabel = target_label, title = target_label + \" vs \" + feature_arr[col_GDP])\n",
+    "    #Change the features and the target to numpy array using the prepare functions\n",
     "    X, target = prepare_feature(df_features_z), prepare_target(df_target)\n",
     "    iterations, alpha = 10000 , 0.001\n",
     "    beta = np.zeros((X.shape[1],1)) #b0 + b1x1 + b2x2\n",
     "    betas[col_GDP], J_storage = gradient_descent_multi(X, target, beta, alpha, iterations)\n",
-    "\n",
-    "    #plotting Gradient Descent, Predicted PDPM vs GDP, Predicted PDPM vs PEP\n",
+    "    #Plotting Gradient Descent, Predicted PDPM vs GDP, Predicted PDPM vs PEP\n",
     "    axes[1][col_GDP].scatter(df_features[feature2_label], df_target)# PDPM vs PEP\n",
     "    axes[1][col_GDP].set(xlabel=feature2_label,ylabel =target_label, title = target_label + \" vs \" + feature2_label)\n",
     "    axes[2][col_GDP].plot(J_storage)#Gradient Descent\n",
     "    axes[2][col_GDP].set(xlabel=\"Iterations\",ylabel=\"Cost\", title = \"Gradient Descent for \"+ feature_arr[col_GDP])\n",
-    "\n",
     "    preds[col_GDP] = predict(df_features_z,betas[col_GDP])\n",
-    "\n",
     "    axes[3][col_GDP].scatter(df_features_z[feature_arr[col_GDP]], df_target)#PDPM vs GDP\n",
     "    axes[3][col_GDP].scatter(df_features_z[feature_arr[col_GDP]], preds[col_GDP])#Predicted PDPM vs GDP\n",
     "    axes[3][col_GDP].set(xlabel=feature_arr[col_GDP],ylabel = target_label, title = \"Predict \" + target_label + \" vs \" + feature_arr[col_GDP])\n",
@@ -307,14 +295,14 @@
     "    target = prepare_target(df_target)\n",
     "    mses[col_GDP] = mean_squared_error(target,preds[col_GDP])\n",
     "\n",
-    "fig.tight_layout()#To fit plots within figure cleanly\n",
-    "#Printing out the MSE & Beta Coefficient for each linear regression\n",
-    "for j in range(len(feature_arr)):\n",
-    "    print(\"MSE {} : {}\".format(feature_arr[j],mses[j]))\n",
+    "    #Printing out the MSE & Beta Coefficient for each linear regression\n",
+    "    print(\"MSE {} : {}\".format(feature_arr[col_GDP],mses[col_GDP]))\n",
     "    beta_str = \"|\"\n",
-    "    for i in range(len(betas[j])):\n",
-    "        beta_str += \" Beta {} : {} |\".format(i,betas[j][i])\n",
-    "    print(beta_str)"
+    "    for i in range(len(betas[col_GDP])):\n",
+    "        beta_str += \" Beta {} : {} |\".format(i,betas[col_GDP][i])\n",
+    "    print(beta_str)\n",
+    "\n",
+    "fig.tight_layout()#To fit plots within figure cleanly"
    ]
   },
   {
@@ -327,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -431,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -451,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -471,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
