Updated Residual error and conclusion

--- a/CC07 GP09 DDW 2D.ipynb
+++ b/CC07 GP09 DDW 2D.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "[Text(0.5, 0, 'PEP'), Text(0, 0.5, 'PDPM'), Text(0.5, 1.0, 'PDPM vs PEP')]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -192,44 +192,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                 GDP        PEP\n",
-      "count      95.000000  95.000000\n",
-      "mean    28241.909705  11.774326\n",
-      "std     20670.058813   5.978104\n",
-      "min      4449.898000   1.144000\n",
-      "25%     13640.702000   6.496000\n",
-      "50%     22767.037000  11.232000\n",
-      "75%     38283.190000  16.902500\n",
-      "max    116935.600000  23.021000\n",
       "MSE GDP : 1.74974856676384e-05\n",
       "| Beta 0 : [0.00675737] | Beta 1 : [-0.00177525] | Beta 2 : [0.00230043] |\n",
-      "           1/GDP        PEP\n",
-      "count  95.000000  95.000000\n",
-      "mean    0.000058  11.774326\n",
-      "std     0.000045   5.978104\n",
-      "min     0.000009   1.144000\n",
-      "25%     0.000026   6.496000\n",
-      "50%     0.000044  11.232000\n",
-      "75%     0.000073  16.902500\n",
-      "max     0.000225  23.021000\n",
       "MSE 1/GDP : 1.8834257365831764e-05\n",
       "| Beta 0 : [0.00675737] | Beta 1 : [0.00140985] | Beta 2 : [0.00249401] |\n",
-      "        LOG(GDP)        PEP\n",
-      "count  95.000000  95.000000\n",
-      "mean    4.344733  11.774326\n",
-      "std     0.311489   5.978104\n",
-      "min     3.648350   1.144000\n",
-      "25%     4.134750   6.496000\n",
-      "50%     4.357307  11.232000\n",
-      "75%     4.582993  16.902500\n",
-      "max     5.067947  23.021000\n",
       "MSE LOG(GDP) : 1.7449170139342724e-05\n",
       "| Beta 0 : [0.00675737] | Beta 1 : [-0.00189291] | Beta 2 : [0.00264044] |\n"
      ]
@@ -298,12 +271,14 @@
    "metadata": {},
    "source": [
     "# Residual Plotting\n",
-    "[Residual plots](https://blog.minitab.com/en/adventures-in-statistics-2/why-you-need-to-check-your-residual-plots-for-regression-analysis) was used to observe the error (difference between the expected and observed value) and determine if our model is valid. If the error is unpredictable (ie no visible trend), that indicates that our model is good at predicting the expected value."
+    "[Residual plots](https://blog.minitab.com/en/adventures-in-statistics-2/why-you-need-to-check-your-residual-plots-for-regression-analysis) was used to observe the error (difference between the observed and expected value) and determine if our model is a good fit. If the error is unpredictable (ie no visible trend), that indicates that our model is good at predicting the expected value.\n",
+    "\n",
+    "$$e = y - \\hat{y}$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +295,7 @@
     }
    ],
    "source": [
-    "#Graphing the Residual Plots (Residual = Response - Deterministic)\n",
+    "#Graphing the Residual Plots (Residual = Observed - Predicted)\n",
     "R_fig , R_axes = plt.subplots(1,3,figsize = (20,5))\n",
     "errors= [None]*3\n",
     "for col in range(len(feature_arr)):\n",
@@ -345,6 +320,7 @@
     "We can conclude that LOG(GDP) transformation is the best fit of our model due to the following:\n",
     "- MSE for LOG(GDP) transformation has the lowest in comparison to the other models\n",
     "- Residual plot of the LOG(GDP) is the most random and unpredictable compared to GDP and 1/GDP transformation\n",
+    "- LOG(GDP) show homoscedasticity, whereas GDP and 1/GDP residual plots shows heteroscedasticity, which indicates that \n",
     "\n",
     "There is also linear correlation of GDP and PEP to PDPM as we hypothesised.\n",
     "\n",
@@ -352,31 +328,6 @@
     "- `LOG(GDP): 1.7449170139342724e-05`\n",
     "- GDP: 1.74974856676384e-05\n",
     "- 1/GDP: 1.8834257365831764e-05"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        LOG(GDP)        PEP\n",
-      "count  95.000000  95.000000\n",
-      "mean    4.344733  11.774326\n",
-      "std     0.311489   5.978104\n",
-      "min     3.648350   1.144000\n",
-      "25%     4.134750   6.496000\n",
-      "50%     4.357307  11.232000\n",
-      "75%     4.582993  16.902500\n",
-      "max     5.067947  23.021000\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df_features_t2.describe())"
    ]
   },
   {
@@ -408,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -430,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -450,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -470,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -514,7 +465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
