--- a/CC07 GP09 DDW 2D.ipynb
+++ b/CC07 GP09 DDW 2D.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "The COVID death target that our group will be working towards will be in terms of the **Percentage of Deaths to the total population per month (PDPM)** for each country\n",
     "\n",
-    "Our group hypothesises 2 features (ie predictor variables) that has strong correlation to PDPM. Namely, the **Gross Domestic Product (GDP)** and **Proportion of population above 65 years old (PEP)** for each country.\n",
+    "Our group hypothesises 2 features (ie predictor variables) that has strong correlation to PDPM. Namely, the **Gross Domestic Product (GDP) per capita (in USD)** and **Proportion of population above 65 years old (PEP)** for each country.\n",
     "\n",
     "[Dataset Site](https://github.com/owid/covid-19-data/tree/master/public/data)\n",
     "(Last taken on 23/11/2021) By using excel, we isolated the features and target described above. \n",
