Modifed so that normalization comes after the split

--- a/2D DDW SC07 Group 9 Project_Brief.ipynb
+++ b/2D DDW SC07 Group 9 Project_Brief.ipynb
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,12 +352,14 @@
     "#plot is a boolean value which indicates if the model needs to be plotted\n",
     "def gradient_descent_better(features, target, beta, alpha, num_iters, df, test_size = 0.5,randomstate = None, plot = True):\n",
     "    dfcopy = df.copy()\n",
-    "    dfcopy = normalize_z(dfcopy,features)\n",
     "    dfcopy = dfcopy.dropna(subset=features + target)\n",
     "    #display(df)\n",
     "    df_feature = dfcopy.loc[:,features]\n",
     "    df_target = dfcopy.loc[:,target]\n",
     "    df_feature_train, df_feature_test, df_target_train, df_target_test = split_data(df_feature, df_target, test_size = test_size,random_state=randomstate)\n",
+    "    #normalize sets\n",
+    "    df_feature_test = normalize_z(df_feature_test, features)\n",
+    "    df_feature_train = normalize_z(df_feature_train, target)\n",
     "    \n",
     "    X = prepare_feature(df_feature_train)\n",
     "    y = prepare_target(df_target_train)\n",
@@ -1509,7 +1511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
