--- a/2D DDW SC07 Group 9 Project_Brief.ipynb
+++ b/2D DDW SC07 Group 9 Project_Brief.ipynb
@@ -431,7 +431,7 @@
     "\n",
     "Describe your metrics and how you want to evaluate your model. Put any Python code to evaluate your model. Use plots to have a visual evaluation.\n",
     "\n",
-    "We are evaluating our model using m"
+    "We are evaluating our model using mean square error value. We want the mean square error to be as low as possible"
    ]
   },
   {
