Updated conclusion on LOG(GDP)

--- a/CC07 GP09 DDW 2D.ipynb
+++ b/CC07 GP09 DDW 2D.ipynb
@@ -321,7 +321,7 @@
     "We can conclude that LOG(GDP) transformation is the best fit of our model due to the following:\n",
     "- MSE for LOG(GDP) transformation has the lowest in comparison to the other models\n",
     "- Residual plot of the LOG(GDP) is the most random and unpredictable compared to GDP and 1/GDP transformation\n",
-    "- LOG(GDP) show homoscedasticity, whereas GDP and 1/GDP residual plots shows heteroscedasticity, which indicates that \n",
+    "- LOG(GDP) shows homoscedasticity, whereas GDP and 1/GDP residual plots shows heteroscedasticity, indicating that the LOG(GDP) has a better fit a linear regression model\n",
     "\n",
     "There is also linear correlation of GDP and PEP to PDPM as we hypothesised.\n",
     "\n",
